<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_black"
    tools:context=".screens.auth.LoginActivity"
    android:orientation="vertical"
    android:id="@+id/content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="@dimen/dim70"
        android:src="@drawable/ic_logo"
        android:scaleType="centerCrop"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/MEDT"
        app:boxBackgroundColor="@color/white_black"
        android:layout_marginTop="@dimen/dim32"
        android:hint="@string/username"
        android:background="@null"
        app:boxBackgroundMode="filled">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:textColor="@color/black_white"
            android:background="@null"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/MEDT"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/dim15"
        app:boxBackgroundColor="@color/white_black"
        app:boxBackgroundMode="filled">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:background="@null"
            android:inputType="textPassword"
            android:textColor="@color/black_white"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        style="@style/AppButton"
        android:layout_marginTop="@dimen/dim24"
        android:background="@drawable/round10"
        android:text="@string/login"
        android:onClick="onClickLoginUB"/>

    <TextView
        style="@style/text14"
        android:text="@string/forgot_password"
        android:layout_marginTop="@dimen/dim24"
        android:layout_marginStart="@dimen/dim20"
        android:textStyle="bold"
        android:textColor="@color/black_white"
        android:onClick="onClickForgotUB"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim24"
        android:layout_marginStart="@dimen/dim20"
        android:layout_marginEnd="@dimen/dim20"
        android:background="@color/white_black">

        <TextView
            style="@style/text14"
            android:text="@string/no_account"
            android:textStyle="bold"
            android:textColor="@color/black_white"/>

        <TextView
            style="@style/text14"
            android:text="@string/register"
            android:layout_marginStart="@dimen/dim6"
            android:textStyle="bold"
            android:textColor="@color/mainOrange"
            android:onClick="onClickRegisterUB"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim24"
        android:layout_marginStart="@dimen/dim10"
        android:layout_marginEnd="@dimen/dim10"
        android:background="@color/white_black"
        android:gravity="center_horizontal">

        <TextView
            style="@style/text12"
            android:text="@string/information"
            android:textColor="@color/mainOrange"
            android:onClick="onClickInforUB"/>

        <TextView
            style="@style/text12"
            android:text="@string/privacy_policy"
            android:layout_marginStart="@dimen/dim10"
            android:textColor="@color/mainOrange"
            android:onClick="onClickPrivacyUB"/>

        <TextView
            style="@style/text12"
            android:text="@string/contact"
            android:layout_marginStart="@dimen/dim10"
            android:textColor="@color/mainOrange"
            android:onClick="onClickContactUB"/>

    </LinearLayout>

</LinearLayout>