<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.auth.RegisterActivity"
    android:background="@color/white_black"
    android:orientation="vertical"
    android:id="@+id/content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/white_black"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dim20"
        android:paddingRight="@dimen/dim20"
        android:elevation="@dimen/dim4">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_grey"
            android:onClick="onClickBackUB"/>

        <TextView
            style="@style/text18"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="Registro"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/lightGray"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_grey"
            android:visibility="invisible"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white_black">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp"
                android:layout_marginTop="@dimen/dim25"
                android:src="@drawable/ic_logo"
                android:scaleType="centerCrop"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MEDT"
                android:layout_marginTop="@dimen/dim32"
                android:hint="@string/username"
                app:boxBackgroundColor="@color/white_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:textColor="@color/black_white"
                    android:background="@null"
                    android:textSize="14sp"
                    android:maxLength="15"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MEDT"
                android:layout_marginTop="@dimen/dim32"
                android:hint="@string/email"
                app:boxBackgroundColor="@color/white_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:textColor="@color/black_white"
                    android:background="@null"
                    android:textSize="14sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MEDT"
                android:hint="@string/password"
                android:layout_marginTop="@dimen/dim15"
                app:boxBackgroundColor="@color/white_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:textColor="@color/black_white"
                    android:textSize="14sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MEDT"
                android:hint="@string/confirm_password"
                android:layout_marginTop="@dimen/dim15"
                app:boxBackgroundColor="@color/white_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:textColor="@color/black_white"
                    android:textSize="14sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/text14"
                android:layout_marginStart="@dimen/dim20"
                android:layout_marginEnd="@dimen/dim20"
                android:layout_marginTop="@dimen/dim15"
                android:text="@string/email_desc"
                android:textColor="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white_black"
                android:layout_marginStart="@dimen/dim20"
                android:layout_marginTop="@dimen/dim15"
                android:layout_marginEnd="@dimen/dim20">

                <CheckBox
                    android:id="@+id/chk_terms"
                    android:layout_width="@dimen/dim32"
                    android:layout_height="@dimen/dim32"/>
                
                <TextView
                    style="@style/text14"
                    android:text="@string/confirm_android"
                    android:layout_marginStart="@dimen/dim6"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>

            <TextView
                style="@style/text14"
                android:text="@string/term_condition"
                android:layout_marginStart="60dp"
                android:textColor="@color/mainOrange"
                android:textStyle="bold"
                android:onClick="onCLickTerms"/>

            <android.widget.Button
                style="@style/AppButton"
                android:background="@drawable/round10"
                android:text="@string/register"
                android:onClick="onClickRegisterUB"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white_black"
                android:layout_marginTop="@dimen/dim15"
                android:layout_marginStart="@dimen/dim20"
                android:layout_marginEnd="@dimen/dim20">

                <TextView
                    style="@style/text14"
                    android:text="@string/already_account"
                    android:textColor="@android:color/darker_gray"/>

                <TextView
                    style="@style/text14"
                    android:text="Entrar"
                    android:layout_marginStart="@dimen/dim10"
                    android:textColor="@color/mainOrange"
                    android:textStyle="bold"
                    android:onClick="onClickEntar"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim15"
                android:layout_marginStart="@dimen/dim10"
                android:layout_marginEnd="@dimen/dim10"
                android:background="@color/white_black"
                android:gravity="center_horizontal">

                <TextView
                    style="@style/text12"
                    android:text="@string/information"
                    android:textColor="@color/mainOrange"
                    android:onClick="onClickInforUB"/>

                <TextView
                    style="@style/text12"
                    android:text="@string/privacy_policy"
                    android:layout_marginStart="@dimen/dim10"
                    android:textColor="@color/mainOrange"
                    android:onClick="onClickPrivacyUB"/>

                <TextView
                    style="@style/text12"
                    android:text="@string/contact"
                    android:layout_marginStart="@dimen/dim10"
                    android:textColor="@color/mainOrange"
                    android:onClick="onClickContactUB"/>

            </LinearLayout>

            <TextView
                style="@style/text14"
                android:text="Adimvi © Todos los derechos reservados"
                android:layout_marginStart="@dimen/dim6"
                android:layout_marginTop="@dimen/dim100"
                android:layout_marginBottom="@dimen/dim45"
                android:textColor="@android:color/darker_gray"
                android:layout_gravity="center_horizontal"
                android:onClick="onClickPrivacyUB"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>